--- a/src/style/global.css
+++ b/src/style/global.css
@@ -12,7 +12,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 1.5;
 }
