Display list of friends

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -40,3 +40,7 @@ button {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
+
+.ReactCollapse--collapse {
+    transition: height 300ms;
+}
